{
  "version": 4,
  "terraform_version": "0.12.11",
  "serial": 43,
  "lineage": "e9dad5c4-64e8-2b61-a548-fdd72416ff00",
  "resources": [
    {
      "module": "module.Hub-Ext-DMZ-APPGW01",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "appgw",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdn_list": [],
                "fqdns": [],
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/applicationGateways/Hub-Ext-DMZ-APPGW01/backendAddressPools/default_pool",
                "ip_address_list": [
                  "10.0.0.1"
                ],
                "ip_addresses": [
                  "10.0.0.1"
                ],
                "name": "default_pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/applicationGateways/Hub-Ext-DMZ-APPGW01/backendHttpSettingsCollection/default_be_http_setting",
                "name": "default_be_http_setting",
                "path": "/path",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 20
              }
            ],
            "custom_error_configuration": [],
            "disabled_ssl_protocols": [],
            "enable_http2": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/applicationGateways/Hub-Ext-DMZ-APPGW01/frontendIPConfigurations/Hub-Ext-DMZ-APPGW01-PIP01-IP-Config",
                "name": "Hub-Ext-DMZ-APPGW01-PIP01-IP-Config",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/publicIPAddresses/Hub-Ext-DMZ-APPGW01-PIP01",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/applicationGateways/Hub-Ext-DMZ-APPGW01/frontendPorts/port_80",
                "name": "port_80",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/applicationGateways/Hub-Ext-DMZ-APPGW01/gatewayIPConfigurations/Hub-Ext-DMZ-APPGW01-IP-Config",
                "name": "Hub-Ext-DMZ-APPGW01-IP-Config",
                "subnet_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-ExtWAF-Net01"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "frontend_ip_configuration_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/applicationGateways/Hub-Ext-DMZ-APPGW01/frontendIPConfigurations/Hub-Ext-DMZ-APPGW01-PIP01-IP-Config",
                "frontend_ip_configuration_name": "Hub-Ext-DMZ-APPGW01-PIP01-IP-Config",
                "frontend_port_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/applicationGateways/Hub-Ext-DMZ-APPGW01/frontendPorts/port_80",
                "frontend_port_name": "port_80",
                "host_name": "",
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/applicationGateways/Hub-Ext-DMZ-APPGW01/httpListeners/default_listener",
                "name": "default_listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": ""
              }
            ],
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/applicationGateways/Hub-Ext-DMZ-APPGW01",
            "identity": [],
            "location": "southeastasia",
            "name": "Hub-Ext-DMZ-APPGW01",
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "",
                "backend_address_pool_name": "default_pool",
                "backend_http_settings_id": "",
                "backend_http_settings_name": "default_be_http_setting",
                "http_listener_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/applicationGateways/Hub-Ext-DMZ-APPGW01/httpListeners/default_listener",
                "http_listener_name": "default_listener",
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/applicationGateways/Hub-Ext-DMZ-APPGW01/requestRoutingRules/default_rule",
                "name": "default_rule",
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "PathBasedRouting",
                "url_path_map_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/applicationGateways/Hub-Ext-DMZ-APPGW01/urlPathMaps/url_path_map_name",
                "url_path_map_name": "url_path_map1"
              }
            ],
            "resource_group_name": "Hub-Network-RG",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "WAF_v2",
                "tier": "WAF_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "tags": {},
            "trusted_root_certificate": [],
            "url_path_map": [
              {
                "default_backend_address_pool_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/applicationGateways/Hub-Ext-DMZ-APPGW01/backendAddressPools/default_pool",
                "default_backend_address_pool_name": "default_pool",
                "default_backend_http_settings_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/applicationGateways/Hub-Ext-DMZ-APPGW01/backendHttpSettingsCollection/default_be_http_setting",
                "default_backend_http_settings_name": "default_be_http_setting",
                "default_redirect_configuration_id": "",
                "default_redirect_configuration_name": "",
                "default_rewrite_rule_set_id": "",
                "default_rewrite_rule_set_name": "",
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/applicationGateways/Hub-Ext-DMZ-APPGW01/urlPathMaps/url_path_map_name",
                "name": "url_path_map1",
                "path_rule": [
                  {
                    "backend_address_pool_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/applicationGateways/Hub-Ext-DMZ-APPGW01/backendAddressPools/default_pool",
                    "backend_address_pool_name": "",
                    "backend_http_settings_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/applicationGateways/Hub-Ext-DMZ-APPGW01/backendHttpSettingsCollection/default_be_http_setting",
                    "backend_http_settings_name": "",
                    "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/applicationGateways/Hub-Ext-DMZ-APPGW01/urlPathMaps/url_path_map_name/pathRules/path_rule_name",
                    "name": "path_rule1",
                    "paths": [
                      "/path"
                    ],
                    "redirect_configuration_id": "",
                    "redirect_configuration_name": "",
                    "rewrite_rule_set_id": "",
                    "rewrite_rule_set_name": ""
                  }
                ]
              }
            ],
            "waf_configuration": [],
            "zones": []
          },
          "depends_on": [
            "azurerm_public_ip.appgwPip"
          ]
        }
      ]
    },
    {
      "module": "module.Hub-ExtWAF-NSG",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-ExtWAF-NSG",
            "location": "southeastasia",
            "name": "Hub-ExtWAF-NSG",
            "resource_group_name": "Hub-Network-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "InboundAllow",
                "priority": 1000,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          }
        }
      ]
    },
    {
      "module": "module.Hub-Net01-NSG",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-Net01-NSG",
            "location": "southeastasia",
            "name": "Hub-Net01-NSG",
            "resource_group_name": "Hub-Network-RG",
            "security_rule": [],
            "tags": {}
          }
        }
      ]
    },
    {
      "module": "module.Hub-IntWAF-NSG",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-IntWAF-NSG",
            "location": "southeastasia",
            "name": "Hub-IntWAF-NSG",
            "resource_group_name": "Hub-Network-RG",
            "security_rule": [],
            "tags": {}
          }
        }
      ]
    },
    {
      "module": "module.Hub-ExtWAF-NSG",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsgRuleSet",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-ExtWAF-NSG/securityRules/InboundAllow",
            "name": "InboundAllow",
            "network_security_group_name": "Hub-ExtWAF-NSG",
            "priority": 1000,
            "protocol": "TCP",
            "resource_group_name": "Hub-Network-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": []
          },
          "depends_on": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.Hub-Net01-NSG",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsgRuleSet",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": []
    },
    {
      "module": "module.Hub-IntWAF-NSG",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsgRuleSet",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": []
    },
    {
      "module": "module.Hub-Ext-DMZ-APPGW01",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "appgwPip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/publicIPAddresses/Hub-Ext-DMZ-APPGW01-PIP01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.184.59.228",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "Hub-Ext-DMZ-APPGW01-PIP01",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "Hub-Network-RG",
            "sku": "Standard"
          }
        }
      ]
    },
    {
      "module": "module.Prod-Hub",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.3.0.224/27",
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "Hub-Network-RG",
            "virtual_network_name": "Hub-VNet"
          },
          "depends_on": [
            "azurerm_resource_group.rgroup",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.3.0.0/26",
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "Hub-Network-RG",
            "virtual_network_name": "Hub-VNet"
          },
          "depends_on": [
            "azurerm_resource_group.rgroup",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.3.0.192/27",
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "Hub-Network-RG",
            "virtual_network_name": "Hub-VNet"
          },
          "depends_on": [
            "azurerm_resource_group.rgroup",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.3.0.64/26",
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-ExtWAF-Net01",
            "name": "Hub-ExtWAF-Net01",
            "network_security_group_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-ExtWAF-NSG",
            "resource_group_name": "Hub-Network-RG",
            "virtual_network_name": "Hub-VNet"
          },
          "depends_on": [
            "azurerm_resource_group.rgroup",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.3.0.128/26",
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-IntWAF-Net01",
            "name": "Hub-IntWAF-Net01",
            "network_security_group_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-IntWAF-NSG",
            "resource_group_name": "Hub-Network-RG",
            "virtual_network_name": "Hub-VNet"
          },
          "depends_on": [
            "azurerm_resource_group.rgroup",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.3.1.0/28",
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-Net01",
            "name": "Hub-Net01",
            "network_security_group_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-Net01-NSG",
            "resource_group_name": "Hub-Network-RG",
            "virtual_network_name": "Hub-VNet"
          },
          "depends_on": [
            "azurerm_resource_group.rgroup",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.Hub-ExtWAF-NSG",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgAssociation",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-ExtWAF-Net01",
            "network_security_group_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-ExtWAF-NSG",
            "subnet_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-ExtWAF-Net01"
          },
          "depends_on": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.Hub-Net01-NSG",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgAssociation",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-Net01",
            "network_security_group_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-Net01-NSG",
            "subnet_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-Net01"
          },
          "depends_on": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.Hub-IntWAF-NSG",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgAssociation",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-IntWAF-Net01",
            "network_security_group_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-IntWAF-NSG",
            "subnet_id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-IntWAF-Net01"
          },
          "depends_on": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.Prod-Hub",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.3.0.0/22"
            ],
            "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet",
            "location": "southeastasia",
            "name": "Hub-VNet",
            "resource_group_name": "Hub-Network-RG",
            "subnet": [
              {
                "address_prefix": "10.3.0.0/26",
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "10.3.0.128/26",
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-IntWAF-Net01",
                "name": "Hub-IntWAF-Net01",
                "security_group": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-IntWAF-NSG"
              },
              {
                "address_prefix": "10.3.0.192/27",
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "10.3.0.224/27",
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              },
              {
                "address_prefix": "10.3.0.64/26",
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-ExtWAF-Net01",
                "name": "Hub-ExtWAF-Net01",
                "security_group": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-ExtWAF-NSG"
              },
              {
                "address_prefix": "10.3.1.0/28",
                "id": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/virtualNetworks/Hub-VNet/subnets/Hub-Net01",
                "name": "Hub-Net01",
                "security_group": "/subscriptions/5b98ba7c-c3f7-43ec-ac20-195d8109fe2b/resourceGroups/Hub-Network-RG/providers/Microsoft.Network/networkSecurityGroups/Hub-Net01-NSG"
              }
            ]
          },
          "depends_on": [
            "azurerm_resource_group.rgroup"
          ]
        }
      ]
    }
  ]
}